# Harambee_1

./: .env.example  .gitignore  .replit  .vercelignore  README.md  app.py  apply.html  index.html  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  styles.css  utils.py  vercel.json  vercel_app.py  wsgi.py
api/: index.py
attached_assets/: Pasted--Act-as-a-senior-full-stack-developer-with-10-years-of-experience-I-want-you-to-create-a-comple-1741053956517.txt  Pasted-Launch-Week-02-starts-today-First-stop-Railway-Metal-View-Details-gentle-rebirth-productio-1741074303161.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-pa-1741180228354.txt
migrations/versions/: 0bb09978c31c_add_missing_columns_to_leaseagreement_.py  ad177b9f802c_fresh_start_with_updated_student_model.py  c235a4a917d4_initial_migration.py  f72a11ae8f87_update_user_table_name_and_foreign_keys.py
static/css/: style.css
static/js/: accommodation.js  application.js  form-validation.js  main.js  stripe.js
templates/: <!-- ...existing code...html  <!DOCTYPE html>.html  about.html  academic_info.html  accommodation.html  apply.html  base  base.html  contact.html  from flask import Flask, render_template.py  gallery.html  home.html  invoice.html  lease_sign.html  payment_proof.html
templates/admin/: applications.html  leases.html  student_detail.html
templates/auth/: login.html  register.html
templates/dashboard/: admin.html  student.html
utils/: __init__.py  pdf_generator.py  sms.py
