
[project]
name = "harambee-student-accommodation"
version = "0.1.0"
description = "Student Accommodation Management System"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "twilio>=9.4.6",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.38",
    "reportlab>=4.3.1",
    "flask-migrate>=4.1.0",
    "python-dotenv>=1.0.1",
]

[tool.poetry]
name = "harambee-student-accommodation"
version = "0.1.0"
description = "Student Accommodation Management System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
email-validator = ">=2.2.0"
flask-login = ">=0.6.3"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
twilio = ">=9.4.6"
werkzeug = ">=3.1.3"
flask-wtf = ">=1.2.2"
sqlalchemy = ">=2.0.38"
reportlab = ">=4.3.1,<4.0.0"
flask-migrate = ">=4.1.0"
python-dotenv = ">=1.0.1"
